# alloc_switcher

./: CMakeLists.txt  main.cpp  strategy.cc  strategy.h  switcher.cc  switcher.h
alloc_switcher/: CMakeLists.txt  Readme.md  main.cpp
alloc_switcher/include/alloc_switcher/: currentMemoryManager.h  loggingMemoryManager.h  mallocator.h  memoryManager.h  memoryManagerSwitcher.h  singletonBase.h  stackMemoryManager.h  standardMemoryManager.h
alloc_switcher/src/: CMakeLists.txt  currentMemoryManager.cc  loggingMemoryManager.cc  memoryManagerSwitcher.cc  new.cc  singletonBase.cc  stackMemoryManager.cc
include/alloc_switcher/: allocatedOn.h  loggingMemoryManager.h  memoryManager.h  memoryManagerSwitcher.h  runtimeHeap.h  strategy.h  switcher.h
src/: CMakeLists.txt  currentMemoryManager.cc  memoryManager.cc  new.cc  runtimeHeap.cc  standardMemoryManager.cc  strategy.cc  switcher.cc
